# EDUMAZE_PROJECT

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  main.cpp  render.yaml
Data/: classrooms.json  quiz_results.json  quizzes.json  students.json  teachers.json
include/: Auth.hpp  Classroom.hpp  Common_Route.hpp  Persistence.hpp  Quiz.hpp  QuizAttempt.hpp  User.hpp  load.hpp  users.hpp
public/templates/: leaderboard.html  login.html  quiz_attempt.html  student_progress.html  style.css  teacher_dashboard.html  welcome.html
source/: Classroom.cpp  Quiz.cpp  QuizAttempt.cpp  Students.cpp  Teachers.cpp
static/: classroom_created.css  classroom_joined.css  dashboard.css  error.css  leaderboard.css  login_signup.css  quiz_attempt.css  student_dashboard.css  student_progress.css  style.css  welcome.css
static/common/: error.css  leaderboard.css  login_signup.css  welcome.css
static/student/: classroom_details.css  classroom_joined.css  join_classroom.css  quiz_attempt.css  student_dashboard.css
static/teacher/: classroom_created.css  classroom_details.css  create_classroom.css  create_quiz.css  my_classroom.css  quiz_created.css  teacher_dashboard.css
templates/: classroom_created.html  classroom_details.html  create_classroom.html  create_quiz.html  error.html  leaderboard.html  login.html  my_classrooms.html  quiz_attempt.html  quiz_created.html  script.js  signup.html  student_dashboard.html  student_progress.html  teacher_dashboard.html  welcome.html
templates/common/: change_password.html  error.html  leaderboard.html  login.html  signup.html  welcome.html
(+15 files in other folders)
